--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.3.2",
     "lucide-react": "^0.534.0",
     "next": "15.4.5",
+    "next-i18next": "^15.4.2",
+    "next-intl": "^4.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^15.6.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -30,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-i18next": "^7.8.3",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
