--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "clsx": "^2.1.1",
     "i18next": "^25.3.2",
     "lucide-react": "^0.534.0",
-    "next": "15.4.5",
+    "next": "^16.0.7",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.3.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
